name:          autoconf2nix
version:       0.1
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.10
author:        Benno Fünfstück
maintainer:    Benno Fünfstück <benno.fuenfstueck@gmail.com>
stability:     experimental
homepage:      http://github.com/bennofs/autoconf2nix/
bug-reports:   http://github.com/bennofs/autoconf2nix/issues
copyright:     Copyright (C) 2016 Benno Fünfstück
synopsis:      autoconf2nix
description:   autoconf2nix
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  README.md

source-repository head
  type: git
  location: https://github.com/bennofs/autoconf2nix.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-tabs
  build-depends:
      base >= 4.4 && < 5

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  hs-source-dirs: tests
